CA | fixed squished logo

--- a/code/thrive-design-stylesheet.css
+++ b/code/thrive-design-stylesheet.css
@@ -516,6 +516,12 @@ body.ribbit #NAV > div {
     padding-right: 15px;
 }
 
+/* give more space for logo so no squishing */
+
+#MPOuterHeader #NAV #MPButtonBar .navbar-header {
+    min-width: 190px;
+}
+
 /************ homepage V1 ************/
 
 .cta-card .featured-card-single.card-layout-split {
